--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400&display=swap');
 *,
 *::after,
 *::before {
@@ -5,8 +6,17 @@
     padding: 0;
     box-sizing: border-box;
     list-style: none;
+    font-family: 'Inter', sans-serif;
 }
-
+body{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: bisque;
+   
+}
 .pagination {
     margin-top: 12px;
 }
